--- a/index.html
+++ b/index.html
@@ -38,7 +38,26 @@
         <img class="banner-image" src="images/banner.png" alt="" />
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="teams display-flex">
+        <div class="team-image-container">
+          <img src="images/team1.png" alt="" />
+          <img src="images/team2.png" alt="" />
+          <img src="images/team3.png" alt="" />
+          <img src="images/team4.png" alt="" />
+        </div>
+        <div class="ourfeatures">
+          <h3 class="feature-title">Quick list of Our Features</h3>
+
+          <p class="feature-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
